[project]
name = "garden-tools-api"
version = "0.1.0"
description = ""
authors = [
    {name = "stephaniemsyed"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "injector (>=0.22.0,<0.23.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
